+Added Admin component +Added menu hamburger on small screens

--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -1,7 +1,9 @@
 {
     "menu": {
         "home": "ホーム",
+        "chapter": "チャプター",
         "about": "アバウト",
+        "admin": "アドミン",
         "signin": "サインイン"
     },
     "home": {
