--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,13 +1,19 @@
 {
     "menu": {
         "home": "Home",
+        "chapter": "Chapter",
         "about": "About",
+        "admin": "Admin",
         "signin": "Sign In"
     },
     "home": {
         "title": "Home",
         "description": "Welcome to Experience The Word.",
         "options-selected": "Options selected:"
+    },
+    "admin": {
+        "title": "Admin",
+        "description": "Only admins here"
     },
     "about": {
         "title": "About",
